aa-regex/tests/fails/any_of_additional_comma.rs
use aa_regex::*;

fn main() {
    let _wrong = any_of!(C,);
    let _wrong = any_of!(,);
}
